<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/marginBig"

    tools:context=".MainActivity">
    <TextView
        android:id="@+id/message1View"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bubbleshape"
        android:padding="@dimen/paddingNormal"
        android:text="@string/message1"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:ellipsize="end"
        android:lines="2"
        />

    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/ic_baseline_reply_24"
        app:layout_constraintBottom_toBottomOf="@+id/message1View"
        app:layout_constraintEnd_toEndOf="@+id/message1View"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/time1View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time1"
        app:layout_constraintEnd_toEndOf="@+id/message1View"
        app:layout_constraintTop_toBottomOf="@+id/message1View"
        android:textSize="@dimen/textSmall"/>

    <TextView
        android:id="@+id/message2View"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bubbleshape"
        android:padding="@dimen/paddingNormal"
        android:text="@string/message2"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time1View"
        android:ellipsize="end"
        android:lines="1"
        />
    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/ic_baseline_reply_24"
        app:layout_constraintBottom_toBottomOf="@+id/message2View"
        app:layout_constraintEnd_toEndOf="@+id/message2View"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/time2View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time2"
        app:layout_constraintEnd_toEndOf="@+id/message2View"
        app:layout_constraintTop_toBottomOf="@+id/message2View"
        android:textSize="@dimen/textSmall"/>

    <TextView
        android:id="@+id/message3View"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bubbleshaperecived"
        android:padding="@dimen/paddingNormal"
        android:text="@string/message3"
        android:textColor="@color/text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time2View"
        android:ellipsize="end"
        android:lines="2"/>

    <TextView
        android:id="@+id/time3View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time3"
        android:textSize="@dimen/textSmall"
        app:layout_constraintStart_toStartOf="@+id/message3View"
        app:layout_constraintTop_toBottomOf="@+id/message3View" />

    <TextView
        android:id="@+id/message4View"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bubbleshape"
        android:padding="@dimen/paddingNormal"
        android:text="@string/message4"
        android:textColor="@color/white"
        android:textSize="14sp"        app:layout_constraintEnd_toEndOf="@+id/time4View"
        app:layout_constraintTop_toBottomOf="@+id/time3View" />

    <TextView
        android:id="@+id/time4View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time4"
        app:layout_constraintEnd_toEndOf="@+id/message2View"
        app:layout_constraintTop_toBottomOf="@+id/message4View"
        android:textSize="@dimen/textSmall"/>
    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/ic_baseline_reply_24"
        app:layout_constraintBottom_toBottomOf="@+id/message4View"
        app:layout_constraintEnd_toEndOf="@+id/message4View"
        android:layout_margin="8dp"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bubbleshapeedittext"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_baseline_sticky_note_2_24"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toTopOf="@+id/editText"
        android:layout_margin="@dimen/marginSmall"
        app:tint="@color/iconColor"
        android:clickable="true"/>

    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="@dimen/marginSmall"
        android:src="@drawable/ic_baseline_mic_24"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="@+id/editText"
        app:tint="@color/iconColor"
        android:clickable="true"/>

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="@dimen/marginSmall"
        android:src="@drawable/ic_baseline_attach_file_24"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@+id/editText"
        app:tint="@color/iconColor"
        android:clickable="true"/>
</androidx.constraintlayout.widget.ConstraintLayout>